@startuml
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam classFontSize 10
skinparam dpi 300
  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.ArticleAdapter {
            - mArticleList : List<Article>
            + ArticleAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.ViewHolder {
            ~ articleView : View
            ~ btn_follow : Button
            ~ tv_name : TextView
            ~ tv_time : TextView
            ~ tv_title : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.LifeActivity {
            - articleList : List<Article>
            - handler : Handler
            # onCreate()
            - showArticles()
        }
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.LostActivity {
            - articleList : List<Article>
            - handler : Handler
            # onCreate()
            - showArticles()
        }
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.QuestionActivity {
            - articleList : List<Article>
            - handler : Handler
            # onCreate()
            - showArticles()
        }
      }
    }
  }
  

  namespace com.wxc.campuslife {
    namespace community {
      namespace catalog {
        class com.wxc.campuslife.community.catalog.RandomActivity {
            - articleList : List<Article>
            - handler : Handler
            # onCreate()
            - showArticles()
        }
      }
    }
  }
  

'  com.wxc.campuslife.community.catalog.ArticleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.wxc.campuslife.community.catalog.ArticleAdapter +-down- com.wxc.campuslife.community.catalog.ViewHolder
'  com.wxc.campuslife.community.catalog.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
'  com.wxc.campuslife.community.catalog.LifeActivity -up-|> androidx.appcompat.app.AppCompatActivity
'  com.wxc.campuslife.community.catalog.LostActivity -up-|> androidx.appcompat.app.AppCompatActivity
'  com.wxc.campuslife.community.catalog.QuestionActivity -up-|> androidx.appcompat.app.AppCompatActivity
'  com.wxc.campuslife.community.catalog.RandomActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
